# pfst

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  VERSION  make_docs.py  pyproject.toml  t.py
docs/: fst.html  index.html  search.js
docs/fst/: astutil.html  common.html  docs.html  extparse.html  fst.html  match.html  misc.html  parsex.html  view.html
docs/fst/docs/: _01_parse.html  _02_locations.html  _03_structure.html  _04_get.html  _05_put.html  _06_raw.html  _07_views.html  _08_parentheses.html  _09_reconcile.html  _10_options.html  d01_parse.html  d02_locations.html  d03_structure.html  d04_get.html  d05_put.html  d06_raw.html  d06_slices.html  d07_raw.html  d07_views.html  d08_coerce.html  d08_parentheses.html  d08_raw.html  d08_views.html  d09_parentheses.html  d09_reconcile.html  d10_options.html  d10_reconcile.html  d11_match.html  d11_options.html  d11_raw.html  d11_reconcile.html  d12_examples.html  d12_raw.html  d12_reconcile.html  d13_examples.html  d13_reconcile.html  d14_examples.html
examples/: 01_parse.py  __init__.py  e01_parse.py  e02_locations.py  e03_structure.py  e04_get.py  e05_put.py  e06_raw.py  e07_parentheses.py  e07_views.py  e08_parentheses.py  e08_raw.py  e09_reconcile.py  e10_misc.py  e10_options.py
scripts/: generate_accessors.py  generate_field_accessors.py  generate_match_patterns.py  generate_traverse_next.py  generate_traverse_prev.py  generate_type_predicates.py  make_coerce_test_cases.py
src/fst/: __init__.py  __main__.py  asttypes.py  astutil.py  code.py  common.py  extparse.py  fst.py  fst_accessors.py  fst_code.py  fst_core.py  fst_get_one.py  fst_get_slice.py  fst_locs.py  fst_misc.py  fst_one.py  fst_one_get.py  fst_one_put.py  fst_one_reconcile.py  fst_options.py  fst_parse.py  fst_put_one.py  fst_put_slice.py  fst_raw.py  fst_reconcile.py  fst_slice.py  fst_slice_get.py  fst_slice_old.py  fst_slice_put.py  fst_traverse.py  fst_trivia.py  fst_type_predicates.py  fst_walk.py  fstlist.py  fstview.py  fuzz.py  locations.py  locs.py  match.py  misc.py  (+18 more)
src/fst/cli/: fuzz.py  search.py  sub.py
src/fst/docs/: _01_parse.py  _04_get.py  _05_put.py  _06_raw.py  _07_views.py  _08_parentheses.py  _09_reconcile.py  _10_options.py  __init__.py  d01_parse.py  d02_locations.py  d03_structure.py  d04_get.py  d05_put.py  d06_raw.py  d06_slices.py  d07_raw.py  d07_views.py  d08_coerce.py  d08_parentheses.py  d08_raw.py  d08_views.py  d09_parentheses.py  d09_reconcile.py  d10_options.py  d10_reconcile.py  d11_match.py  d11_options.py  d11_raw.py  d11_reconcile.py  d12_examples.py  d12_raw.py  d12_reconcile.py  d13_examples.py  d14_examples.py
tests/: data_other.py  data_put_one.py  support.py  test_astutil.py  test_doctest.py  test_fst.py  test_fst_bulk.py  test_fst_misc.py  test_fst_one.py  test_fst_put.py  test_fst_slice.py  test_match.py  test_misc.py  test_one.py  test_parse.py  test_slice.py  test_traverse.py  test_unicode.py  test_util.py  util.py
tests/data/: data_coerce.py  data_get.py  data_get_one.py  data_get_slice.py  data_other.py  data_parse_autogen.py  data_parse_invalid_src.txt  data_put_one.py  data_put_slice.py  data_sub.py  data_syntax_errors.py  data_test.py
tests/doctests/: test__code_to_slice_BoolOp_values_maybe_dangling.txt  test__code_to_slice_Compare__all_maybe_dangling.txt  test__get_slice_seq.txt  test__get_slice_seq_sep_and_dedent.txt  test__locs_slice__nosep.txt  test__locs_slice__sep.txt  test__locs_slice_sep.txt  test__locs_slice_seq.txt  test__locs_slice_seq_get.txt  test__put_slice_seq.txt  test__slice_seq_locs_get.txt  test_fst_misc.txt  test_get_slice_nosep.txt  test_get_slice_sep.txt  test_misc.txt  test_misc_arguments_slice.txt  test_misc_coerce.txt  test_misc_coerce_to_expr.txt  test_misc_coerce_to_expr_seq.txt  test_misc_coerce_to_pattern.txt  test_misc_extra_syntax_slices.txt  test_misc_match.txt  test_misc_non_expr_compatible_coerce.txt  test_misc_pattern_attrlikes.txt  test_put_slice_nosep.txt  test_put_slice_one_and_coerce.txt  test_put_slice_one_and_coerce1.txt  test_put_slice_one_and_coerce2.txt  test_put_slice_sep.txt  test_slice_matchor.txt
