[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pfst"
description = "Format-preserving high level AST editing for Python 3.10+."
keywords = [
  "ast", "python", "python-ast", "code-transform", "refactoring",
  "syntax-tree", "code-analysis", "format-preserving", "source-editing",
  "code-rewriting"
]
readme = "README.md"
license = "MIT"
authors = [{name = "Tomasz Pytel", email = "tompytel@gmail.com"}]
requires-python = ">=3.10"
dynamic = ["version"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
]

[project.urls]
Repository = "https://github.com/tom-pytel/pfst"
Documentation = "https://tom-pytel.github.io/pfst/"
PyPI = "https://pypi.org/project/pfst/"

[project.optional-dependencies]

dev = [
  "build",
  "setuptools",
  "wheel",
  "twine",
  "pdoc==15.0.1",
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["examples"]

[tool.setuptools.dynamic]
version = { file = "VERSION" }
