[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pfst"
description = "Format-preserving high level AST editing for Python 3.10+."
keywords = [
  "ast", "python", "python-ast", "code-transform", "refactoring",
  "syntax-tree", "code-analysis", "format-preserving", "source-editing",
  "code-rewriting"
]
readme = "README.md"
license = "MIT"
authors = [{name = "Tomasz Pytel", email = "tompytel@gmail.com"}]
requires-python = ">=3.10"
dynamic = ["version"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
]

[project.urls]
Repository = "https://github.com/tom-pytel/pfst"
Documentation = "https://tom-pytel.github.io/pfst/"
PyPI = "https://pypi.org/project/pfst/"

[project.optional-dependencies]

dev = [
  "build",
  "setuptools",
  "wheel",
  "twine",
  "pdoc==15.0.1",
  "ruff==0.12.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.ruff]
line-length = 120
exclude = ["tests", "src/fst/fuzz.py", "make_docs.py"]

[tool.ruff.format]
quote-style = "preserve"
skip-magic-trailing-comma = true  # <-- Prevents Ruff from auto-wrapping arguments

[tool.ruff.lint]
task-tags = [""]
select = [
    "ANN",     # Annotation-related style rules
    "PYI",     # pyi-specific (stub file) rules, many check type syntax
    "E", "F", "B"
]
ignore = [
  "E501",    # Line too long (132 > 120), seriously, long comments are useful
  "E701",    # Multiple statements on one line (colon)
  "E702",    # Multiple statements on one line (semicolon)
  "E731",    # Do not assign a `lambda` expression, use a `def`
  "E741",    # Ambiguous variable name: `l`
  "ANN003",  # Missing type annotation for `**kwargs`
]
